devel/rubygem-cucumber-tag-expressions8: Add rubygem-cucumber-tag-expressions8 8.1.0 (copied from rubygem-cucumber-tag-expressions)
- Add PORTSCOUT

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7282,6 +7282,7 @@
     SUBDIR += rubygem-cucumber-messages30
     SUBDIR += rubygem-cucumber-rails
     SUBDIR += rubygem-cucumber-tag-expressions
+    SUBDIR += rubygem-cucumber-tag-expressions8
     SUBDIR += rubygem-cucumber-wire
     SUBDIR += rubygem-curses
     SUBDIR += rubygem-cyoi
