--- a/graphics/py-imagecodecs/Makefile
+++ b/graphics/py-imagecodecs/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	imagecodecs
 PORTVERSION=	2025.11.11
+PORTREVISION=	1
 CATEGORIES=	graphics python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
