--- a/math/py-pcodec/Makefile.crates
+++ b/math/py-pcodec/Makefile.crates
@@ -1,46 +1,44 @@
-CARGO_CRATES=	addr2line-0.24.2 \
-		adler2-2.0.1 \
-		ahash-0.8.12 \
-		aho-corasick-1.1.3 \
+CARGO_CRATES=	ahash-0.8.12 \
+		aho-corasick-1.1.4 \
 		alloc-no-stdlib-2.0.4 \
 		alloc-stdlib-0.2.2 \
 		allocator-api2-0.2.21 \
 		android_system_properties-0.1.5 \
-		anstream-0.6.20 \
-		anstyle-1.0.11 \
+		anstream-0.6.21 \
+		anstyle-1.0.13 \
 		anstyle-parse-0.2.7 \
-		anstyle-query-1.1.4 \
-		anstyle-wincon-3.0.10 \
+		anstyle-query-1.1.5 \
+		anstyle-wincon-3.0.11 \
 		anyhow-1.0.100 \
 		arcref-0.2.0 \
 		arrayref-0.3.9 \
 		arrow-54.3.1 \
 		arrow-arith-54.3.1 \
-		arrow-arith-56.1.0 \
+		arrow-arith-56.2.0 \
 		arrow-array-54.3.1 \
-		arrow-array-56.1.0 \
+		arrow-array-56.2.0 \
 		arrow-buffer-54.3.1 \
-		arrow-buffer-56.1.0 \
+		arrow-buffer-56.2.0 \
 		arrow-cast-54.3.1 \
 		arrow-csv-54.3.1 \
 		arrow-data-54.3.1 \
-		arrow-data-56.1.0 \
+		arrow-data-56.2.0 \
 		arrow-ipc-54.3.1 \
 		arrow-ord-54.3.1 \
-		arrow-ord-56.1.0 \
+		arrow-ord-56.2.0 \
 		arrow-row-54.3.1 \
 		arrow-schema-54.3.1 \
-		arrow-schema-56.1.0 \
+		arrow-schema-56.2.0 \
 		arrow-select-54.3.1 \
-		arrow-select-56.1.0 \
+		arrow-select-56.2.0 \
 		arrow-string-54.3.1 \
-		arrow-string-56.1.0 \
+		arrow-string-56.2.0 \
 		async-channel-2.5.0 \
 		async-compat-0.2.5 \
 		async-executor-1.13.3 \
 		async-fs-2.2.0 \
 		async-io-2.6.0 \
-		async-lock-3.4.1 \
+		async-lock-3.4.2 \
 		async-net-2.0.0 \
 		async-process-2.5.0 \
 		async-signal-0.2.13 \
@@ -51,33 +49,32 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		atoi-2.0.0 \
 		atomic-waker-1.1.2 \
 		autocfg-1.5.0 \
-		backtrace-0.3.75 \
 		base64-0.22.1 \
-		better_io-0.1.0 \
+		better_io-0.2.0 \
 		bindgen-0.69.5 \
 		bit-vec-0.8.0 \
 		bitflags-1.3.2 \
-		bitflags-2.9.4 \
+		bitflags-2.10.0 \
 		bitvec-1.0.1 \
 		blocking-1.6.2 \
 		blosc2-src-0.1.4 \
 		brotli-7.0.0 \
 		brotli-decompressor-4.0.3 \
-		bumpalo-3.19.0 \
+		bumpalo-3.19.1 \
 		bytecount-0.6.9 \
 		byteorder-1.5.0 \
-		bytes-1.10.1 \
-		cc-1.2.38 \
+		bytes-1.11.0 \
+		cc-1.2.51 \
 		cesu8-1.1.0 \
 		cexpr-0.6.0 \
-		cfg-if-1.0.3 \
+		cfg-if-1.0.4 \
 		chrono-0.4.42 \
 		clang-sys-1.8.1 \
-		clap-4.5.48 \
-		clap_builder-4.5.48 \
-		clap_derive-4.5.47 \
-		clap_lex-0.7.5 \
-		cmake-0.1.54 \
+		clap-4.5.54 \
+		clap_builder-4.5.54 \
+		clap_derive-4.5.49 \
+		clap_lex-0.7.6 \
+		cmake-0.1.57 \
 		colorchoice-1.0.4 \
 		combine-4.6.7 \
 		concurrent-queue-2.5.0 \
@@ -92,8 +89,8 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		crossbeam-queue-0.3.12 \
 		crossbeam-utils-0.8.21 \
 		crunchy-0.2.4 \
-		csv-1.3.1 \
-		csv-core-0.1.12 \
+		csv-1.4.0 \
+		csv-core-0.1.13 \
 		dashmap-6.1.0 \
 		displaydoc-0.2.5 \
 		dtype_dispatch-0.1.1 \
@@ -106,19 +103,19 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		errno-0.3.14 \
 		event-listener-5.4.1 \
 		event-listener-strategy-0.5.4 \
-		exponential-decay-histogram-0.1.13 \
+		exponential-decay-histogram-0.1.14 \
 		ext-trait-1.0.1 \
 		ext-trait-proc_macros-1.0.1 \
 		extension-traits-1.0.1 \
 		fastlanes-0.2.2 \
 		fastrand-2.3.0 \
-		find-msvc-tools-0.1.2 \
+		find-msvc-tools-0.1.6 \
 		flatbuffers-24.12.23 \
-		flatbuffers-25.2.10 \
+		flatbuffers-25.12.19 \
 		fnv-1.0.7 \
 		foldhash-0.2.0 \
 		form_urlencoded-1.2.2 \
-		fsst-rs-0.5.3 \
+		fsst-rs-0.5.6 \
 		funty-2.0.0 \
 		futures-0.3.31 \
 		futures-channel-0.3.31 \
@@ -130,88 +127,81 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		futures-sink-0.3.31 \
 		futures-task-0.3.31 \
 		futures-util-0.3.31 \
-		generator-0.8.7 \
 		getrandom-0.2.16 \
-		getrandom-0.3.3 \
-		gimli-0.31.1 \
+		getrandom-0.3.4 \
 		glob-0.3.3 \
-		half-2.6.0 \
+		half-2.7.1 \
 		handle-1.0.2 \
 		hashbrown-0.14.5 \
 		hashbrown-0.15.5 \
-		hashbrown-0.16.0 \
+		hashbrown-0.16.1 \
 		heck-0.5.0 \
 		hermit-abi-0.5.2 \
-		home-0.5.11 \
+		home-0.5.12 \
 		hound-3.5.1 \
 		humansize-2.1.3 \
 		iana-time-zone-0.1.64 \
 		iana-time-zone-haiku-0.1.2 \
-		icu_collections-2.0.0 \
-		icu_locale_core-2.0.0 \
-		icu_normalizer-2.0.0 \
-		icu_normalizer_data-2.0.0 \
-		icu_properties-2.0.1 \
-		icu_properties_data-2.0.1 \
-		icu_provider-2.0.0 \
+		icu_collections-2.1.1 \
+		icu_locale_core-2.1.1 \
+		icu_normalizer-2.1.1 \
+		icu_normalizer_data-2.1.1 \
+		icu_properties-2.1.2 \
+		icu_properties_data-2.1.2 \
+		icu_provider-2.1.1 \
 		idna-1.1.0 \
 		idna_adapter-1.2.1 \
-		indexmap-2.11.4 \
+		indexmap-2.12.1 \
 		indicatif-0.17.11 \
-		indoc-2.0.6 \
+		indoc-2.0.7 \
 		integer-encoding-3.0.4 \
 		inventory-0.3.21 \
-		io-uring-0.7.10 \
-		is_terminal_polyfill-1.70.1 \
+		is_terminal_polyfill-1.70.2 \
 		itertools-0.12.1 \
 		itertools-0.14.0 \
-		itoa-1.0.15 \
-		jiff-0.2.15 \
-		jiff-static-0.2.15 \
-		jiff-tzdb-0.1.4 \
+		itoa-1.0.17 \
+		jiff-0.2.18 \
+		jiff-static-0.2.18 \
+		jiff-tzdb-0.1.5 \
 		jiff-tzdb-platform-0.1.3 \
 		jni-0.21.1 \
 		jni-sys-0.3.0 \
 		jobserver-0.1.34 \
-		js-sys-0.3.80 \
+		js-sys-0.3.83 \
 		kanal-0.1.1 \
 		lazy_static-1.5.0 \
 		lazycell-1.3.0 \
 		lending-iterator-0.1.7 \
 		lending-iterator-proc_macros-0.1.7 \
-		lexical-core-1.0.5 \
-		lexical-parse-float-1.0.5 \
-		lexical-parse-integer-1.0.5 \
-		lexical-util-1.0.6 \
-		lexical-write-float-1.0.5 \
-		lexical-write-integer-1.0.5 \
-		libc-0.2.175 \
-		libloading-0.8.8 \
+		lexical-core-1.0.6 \
+		lexical-parse-float-1.0.6 \
+		lexical-parse-integer-1.0.6 \
+		lexical-util-1.0.7 \
+		lexical-write-float-1.0.6 \
+		lexical-write-integer-1.0.6 \
+		libc-0.2.179 \
+		libloading-0.8.9 \
 		libm-0.2.15 \
 		linux-raw-sys-0.4.15 \
 		linux-raw-sys-0.11.0 \
-		litemap-0.8.0 \
-		lock_api-0.4.13 \
-		log-0.4.28 \
-		loom-0.7.2 \
+		litemap-0.8.1 \
+		lock_api-0.4.14 \
+		log-0.4.29 \
 		macro_rules_attribute-0.1.3 \
 		macro_rules_attribute-proc_macro-0.1.3 \
-		matchers-0.2.0 \
 		matrixmultiply-0.3.10 \
-		memchr-2.7.5 \
+		memchr-2.7.6 \
 		memoffset-0.9.1 \
 		minimal-lexical-0.2.1 \
-		miniz_oxide-0.8.9 \
-		mio-1.0.4 \
-		moka-0.12.10 \
+		mio-1.1.1 \
+		moka-0.12.12 \
 		multiversion-0.8.0 \
 		multiversion-macros-0.8.0 \
-		ndarray-0.16.1 \
+		ndarray-0.17.1 \
 		never-say-never-6.6.666 \
 		nom-7.1.3 \
 		nougat-0.2.4 \
 		nougat-proc_macros-0.2.4 \
-		nu-ansi-term-0.50.1 \
 		num-0.4.3 \
 		num-bigint-0.4.6 \
 		num-complex-0.4.6 \
@@ -219,23 +209,22 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		num-iter-0.1.45 \
 		num-rational-0.4.2 \
 		num-traits-0.2.19 \
-		num_enum-0.7.4 \
-		num_enum_derive-0.7.4 \
+		num_enum-0.7.5 \
+		num_enum_derive-0.7.5 \
 		number_prefix-0.4.0 \
 		numpy-0.27.1 \
-		object-0.36.7 \
 		once_cell-1.21.3 \
-		once_cell_polyfill-1.70.1 \
+		once_cell_polyfill-1.70.2 \
 		oneshot-0.1.11 \
 		ordered-float-2.10.1 \
-		ordered-float-5.0.0 \
+		ordered-float-5.1.0 \
 		papergrid-0.14.0 \
 		parking-2.2.1 \
-		parking_lot-0.12.4 \
-		parking_lot_core-0.9.11 \
+		parking_lot-0.12.5 \
+		parking_lot_core-0.9.12 \
 		parquet-54.3.1 \
 		paste-1.0.15 \
-		pco-0.4.6 \
+		pco-0.4.9 \
 		percent-encoding-2.3.2 \
 		pin-project-1.1.10 \
 		pin-project-internal-1.1.10 \
@@ -245,14 +234,14 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		pkg-config-0.3.32 \
 		polling-3.11.0 \
 		polonius-the-crab-0.2.1 \
-		portable-atomic-1.11.1 \
+		portable-atomic-1.13.0 \
 		portable-atomic-util-0.2.4 \
-		potential_utf-0.1.3 \
+		potential_utf-0.1.4 \
 		ppv-lite86-0.2.21 \
 		prettyplease-0.2.37 \
 		proc-macro-error-attr2-2.0.0 \
 		proc-macro-error2-2.0.1 \
-		proc-macro2-1.0.101 \
+		proc-macro2-1.0.105 \
 		prost-0.14.1 \
 		prost-derive-0.14.1 \
 		prost-types-0.14.1 \
@@ -261,7 +250,8 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		pyo3-ffi-0.27.2 \
 		pyo3-macros-0.27.2 \
 		pyo3-macros-backend-0.27.2 \
-		quote-1.0.40 \
+		python3-dll-a-0.2.14 \
+		quote-1.0.43 \
 		r-efi-5.3.0 \
 		radium-0.7.0 \
 		rand-0.8.5 \
@@ -274,81 +264,74 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		rawpointer-0.2.1 \
 		rayon-1.11.0 \
 		rayon-core-1.13.0 \
-		redox_syscall-0.5.17 \
-		regex-1.11.2 \
-		regex-automata-0.4.10 \
-		regex-syntax-0.8.6 \
+		redox_syscall-0.5.18 \
+		regex-1.12.2 \
+		regex-automata-0.4.13 \
+		regex-syntax-0.8.8 \
 		rust-openzl-0.1.0 \
 		rust-openzl-sys-0.1.0 \
-		rustc-demangle-0.1.26 \
 		rustc-hash-1.1.0 \
 		rustc-hash-2.1.1 \
 		rustc_version-0.4.1 \
 		rustix-0.38.44 \
-		rustix-1.1.2 \
+		rustix-1.1.3 \
 		rustversion-1.0.22 \
-		ryu-1.0.20 \
+		ryu-1.0.22 \
 		same-file-1.0.6 \
-		scoped-tls-1.0.1 \
 		scopeguard-1.2.0 \
 		semver-1.0.27 \
 		seq-macro-0.3.6 \
-		serde-1.0.225 \
+		serde-1.0.228 \
 		serde-value-0.7.0 \
-		serde_core-1.0.225 \
-		serde_derive-1.0.225 \
+		serde_core-1.0.228 \
+		serde_derive-1.0.228 \
 		serde_spanned-0.6.9 \
-		sharded-slab-0.1.7 \
 		shlex-1.3.0 \
-		signal-hook-registry-1.4.6 \
+		signal-hook-registry-1.4.8 \
 		simdutf8-0.1.5 \
 		sketches-ddsketch-0.3.0 \
 		slab-0.4.11 \
 		smallvec-1.15.1 \
 		smol-2.0.2 \
 		snap-1.1.1 \
-		socket2-0.6.0 \
+		socket2-0.6.1 \
 		spdp_sys-0.1.0 \
-		stable_deref_trait-1.2.0 \
+		stable_deref_trait-1.2.1 \
 		static_assertions-1.1.0 \
 		strsim-0.11.1 \
 		syn-1.0.109 \
-		syn-2.0.106 \
+		syn-2.0.113 \
 		synstructure-0.13.2 \
 		tabled-0.18.0 \
 		tabled_derive-0.10.0 \
 		tagptr-0.2.0 \
 		tap-1.0.1 \
 		target-features-0.1.6 \
-		target-lexicon-0.13.3 \
+		target-lexicon-0.13.4 \
 		termtree-0.5.1 \
 		thiserror-1.0.69 \
 		thiserror-impl-1.0.69 \
-		thread_local-1.1.9 \
 		thrift-0.17.0 \
 		tiny-keccak-2.0.2 \
-		tinystr-0.8.1 \
-		tokio-1.47.1 \
-		tokio-macros-2.5.0 \
+		tinystr-0.8.2 \
+		tokio-1.49.0 \
+		tokio-macros-2.6.0 \
 		toml-0.8.23 \
 		toml_datetime-0.6.11 \
 		toml_edit-0.22.27 \
 		toml_write-0.1.2 \
-		tracing-0.1.41 \
-		tracing-attributes-0.1.30 \
-		tracing-core-0.1.34 \
-		tracing-log-0.2.0 \
-		tracing-subscriber-0.3.20 \
+		tracing-0.1.44 \
+		tracing-attributes-0.1.31 \
+		tracing-core-0.1.36 \
 		turbo_pfor_sys-0.1.3 \
 		twox-hash-1.6.3 \
-		unicode-ident-1.0.19 \
-		unicode-width-0.2.1 \
+		unicode-ident-1.0.22 \
+		unicode-width-0.2.2 \
 		unindent-0.2.4 \
-		url-2.5.7 \
+		url-2.5.8 \
 		utf8_iter-1.0.4 \
 		utf8parse-0.2.2 \
-		uuid-1.18.1 \
-		valuable-0.1.1 \
+		uuid-1.19.0 \
 		version_check-0.9.5 \
 		vortex-0.53.0 \
 		vortex-alp-0.53.0 \
@@ -383,78 +366,66 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		vortex-zstd-0.53.0 \
 		walkdir-2.5.0 \
 		wasi-0.11.1+wasi-snapshot-preview1 \
-		wasi-0.14.7+wasi-0.2.4 \
 		wasip2-1.0.1+wasi-0.2.4 \
-		wasm-bindgen-0.2.103 \
-		wasm-bindgen-backend-0.2.103 \
-		wasm-bindgen-futures-0.4.53 \
-		wasm-bindgen-macro-0.2.103 \
-		wasm-bindgen-macro-support-0.2.103 \
-		wasm-bindgen-shared-0.2.103 \
-		web-sys-0.3.80 \
+		wasm-bindgen-0.2.106 \
+		wasm-bindgen-futures-0.4.56 \
+		wasm-bindgen-macro-0.2.106 \
+		wasm-bindgen-macro-support-0.2.106 \
+		wasm-bindgen-shared-0.2.106 \
+		web-sys-0.3.83 \
 		web-time-1.1.0 \
 		which-4.4.2 \
 		winapi-util-0.1.11 \
-		windows-0.61.3 \
-		windows-collections-0.2.0 \
-		windows-core-0.61.2 \
-		windows-core-0.62.0 \
-		windows-future-0.2.1 \
-		windows-implement-0.60.0 \
-		windows-interface-0.59.1 \
-		windows-link-0.1.3 \
-		windows-link-0.2.0 \
-		windows-numerics-0.2.0 \
-		windows-result-0.3.4 \
-		windows-result-0.4.0 \
-		windows-strings-0.4.2 \
-		windows-strings-0.5.0 \
+		windows-core-0.62.2 \
+		windows-implement-0.60.2 \
+		windows-interface-0.59.3 \
+		windows-link-0.2.1 \
+		windows-result-0.4.1 \
+		windows-strings-0.5.1 \
 		windows-sys-0.45.0 \
-		windows-sys-0.52.0 \
 		windows-sys-0.59.0 \
 		windows-sys-0.60.2 \
-		windows-sys-0.61.0 \
+		windows-sys-0.61.2 \
 		windows-targets-0.42.2 \
 		windows-targets-0.52.6 \
-		windows-targets-0.53.3 \
-		windows-threading-0.1.0 \
+		windows-targets-0.53.5 \
 		windows_aarch64_gnullvm-0.42.2 \
 		windows_aarch64_gnullvm-0.52.6 \
-		windows_aarch64_gnullvm-0.53.0 \
+		windows_aarch64_gnullvm-0.53.1 \
 		windows_aarch64_msvc-0.42.2 \
 		windows_aarch64_msvc-0.52.6 \
-		windows_aarch64_msvc-0.53.0 \
+		windows_aarch64_msvc-0.53.1 \
 		windows_i686_gnu-0.42.2 \
 		windows_i686_gnu-0.52.6 \
-		windows_i686_gnu-0.53.0 \
+		windows_i686_gnu-0.53.1 \
 		windows_i686_gnullvm-0.52.6 \
-		windows_i686_gnullvm-0.53.0 \
+		windows_i686_gnullvm-0.53.1 \
 		windows_i686_msvc-0.42.2 \
 		windows_i686_msvc-0.52.6 \
-		windows_i686_msvc-0.53.0 \
+		windows_i686_msvc-0.53.1 \
 		windows_x86_64_gnu-0.42.2 \
 		windows_x86_64_gnu-0.52.6 \
-		windows_x86_64_gnu-0.53.0 \
+		windows_x86_64_gnu-0.53.1 \
 		windows_x86_64_gnullvm-0.42.2 \
 		windows_x86_64_gnullvm-0.52.6 \
-		windows_x86_64_gnullvm-0.53.0 \
+		windows_x86_64_gnullvm-0.53.1 \
 		windows_x86_64_msvc-0.42.2 \
 		windows_x86_64_msvc-0.52.6 \
-		windows_x86_64_msvc-0.53.0 \
-		winnow-0.7.13 \
+		windows_x86_64_msvc-0.53.1 \
+		winnow-0.7.14 \
 		wit-bindgen-0.46.0 \
 		witchcraft-metrics-1.0.1 \
-		writeable-0.6.1 \
+		writeable-0.6.2 \
 		wyz-0.5.1 \
-		yoke-0.8.0 \
-		yoke-derive-0.8.0 \
-		zerocopy-0.8.27 \
-		zerocopy-derive-0.8.27 \
+		yoke-0.8.1 \
+		yoke-derive-0.8.1 \
+		zerocopy-0.8.31 \
+		zerocopy-derive-0.8.31 \
 		zerofrom-0.1.6 \
 		zerofrom-derive-0.1.6 \
-		zerotrie-0.2.2 \
-		zerovec-0.11.4 \
-		zerovec-derive-0.11.1 \
+		zerotrie-0.2.3 \
+		zerovec-0.11.5 \
+		zerovec-derive-0.11.2 \
 		zigzag-0.1.0 \
 		zstd-0.13.3 \
 		zstd-safe-7.2.4 \
