security/py-google-auth: Update to 2.48.0
- Remove CRYPTOGRAPHY_BASE option
- Update option descriptions

Changes:	https://github.com/googleapis/google-auth-library-python/releases

--- a/security/py-google-auth/Makefile
+++ b/security/py-google-auth/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	google-auth
-PORTVERSION=	2.47.0
+PORTVERSION=	2.48.0
 CATEGORIES=	security python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -18,23 +18,20 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyasn1-modules>=0.2.1:devel/py-pyasn1-module
 		${PYTHON_PKGNAMEPREFIX}rsa>=3.1.4<5:security/py-rsa@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent pep517
+USE_PYTHON=	autoplist concurrent cryptography pep517
 
 NO_ARCH=	yes
 
-OPTIONS_DEFINE=	AIOHTTP CRYPTOGRAPHY_BASE PYJWT REAUTH REQUESTS URLLIB3
-OPTIONS_DEFAULT=AIOHTTP CRYPTOGRAPHY_BASE PYJWT REQUESTS
-AIOHTTP_DESC=		aiohttp support
-AIOHTTP_IMPLIES=	REQUESTS
-CRYPTOGRAPHY_BASE_DESC=	Cryptography support
-PYJWT_DESC=		JWT token support
-PYJWT_IMPLIES=		CRYPTOGRAPHY_BASE
-REAUTH_DESC=		Reauth support
-REQUESTS_DESC=		Requests support
-URLLIB3_DESC=		Urllib3 support
+OPTIONS_DEFINE=	AIOHTTP PYJWT REAUTH REQUESTS URLLIB3
+OPTIONS_DEFAULT=AIOHTTP PYJWT REQUESTS
+AIOHTTP_DESC=	Asynchronous HTTP requests via aiohttp
+AIOHTTP_IMPLIES=REQUESTS
+PYJWT_DESC=	Create/verify JWT tokens
+REAUTH_DESC=	Authentication while refreshing credentials
+REQUESTS_DESC=	Transport adapter for requests
+URLLIB3_DESC=	Transport adapter for urllib3
 
 AIOHTTP_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}aiohttp>=3.6.2<4.0.0:www/py-aiohttp@${PY_FLAVOR}
-CRYPTOGRAPHY_BASE_USE=	PYTHON=cryptography
 PYJWT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyjwt>=2.0:www/py-pyjwt@${PY_FLAVOR}
 REAUTH_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyu2f>=0.1.5:net/py-pyu2f@${PY_FLAVOR}
 REQUESTS_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}requests>=2.20.0<3.0.0:www/py-requests@${PY_FLAVOR}
