--- a/www/py-django-annoying/Makefile
+++ b/www/py-django-annoying/Makefile
@@ -1,9 +1,13 @@
 PORTNAME=	django-annoying
 PORTVERSION=	0.10.8
+PORTREVISION=	1
 CATEGORIES=	www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	django_annoying-${PORTVERSION}
+
+PATCH_SITES=	https://github.com/skorokithakis/django-annoying/commit/
+PATCHFILES=	d1434314175dc8f7211ba525c5da6435b8d405c3.patch:-p1
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Eliminate annoying things in the Django framework
@@ -15,8 +19,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}django42>=1.11:www/py-django42@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}six>=0:devel/py-six@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}django42>=1.11:www/py-django42@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517
