security/nmap: Mark broken with PCAP option
PCAP depends on libdbus. This breaks linkage.

--- a/security/nmap/Makefile
+++ b/security/nmap/Makefile
@@ -17,8 +17,7 @@ LICENSE_NAME=	Nmap Public Source License
 LICENSE_PERMS=	auto-accept dist-mirror pkg-mirror pkg-sell
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-LIB_DEPENDS=	libpcre2-16.so:devel/pcre2 \
-		libdbus-1.so:devel/dbus
+LIB_DEPENDS=	libpcre2-16.so:devel/pcre2
 
 .if !defined(MASTERDIR)
 
@@ -33,8 +32,6 @@ MAKE_JOBS_UNSAFE=	yes
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
-LDFLAGS+=	-ldbus-1
-
 OPTIONS_SUB=	yes
 OPTIONS_DEFINE=	DOCS NLS PCAP SSH2 SSL
 OPTIONS_DEFAULT=NLS SSH2 SSL
@@ -44,6 +41,7 @@ SSH2_DESC=		SSH2 protocol support
 
 NLS_CONFIGURE_ENABLE=	nls
 PCAP_CONFIGURE_ON=	--with-libpcap=included
+PCAP_BROKEN=		Broken libdbus linkage with builtin PCAP
 SSH2_CONFIGURE_ON=	--with-libssh2=included
 SSH2_CONFIGURE_OFF=	--without-libssh2
 SSH2_IMPLIES=		SSL
