devel/rubygem-rbs: Update to 3.10.3
Changes:	https://github.com/ruby/rbs/releases

--- a/devel/rubygem-rbs/Makefile
+++ b/devel/rubygem-rbs/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	rbs
-PORTVERSION=	3.10.2
+PORTVERSION=	3.10.3
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
@@ -12,7 +12,8 @@ LICENSE_COMB=	dual
 LICENSE_FILE_BSD2CLAUSE=${WRKSRC}/BSDL
 LICENSE_FILE_RUBY=	${WRKSRC}/COPYING
 
-RUN_DEPENDS=	rubygem-logger>=0:devel/rubygem-logger
+RUN_DEPENDS=	rubygem-logger>=0:devel/rubygem-logger \
+		rubygem-tsort>=0:devel/rubygem-tsort
 
 USES=		gem
 
