--- a/textproc/rubygem-commonmarker/Makefile.crates
+++ b/textproc/rubygem-commonmarker/Makefile.crates
@@ -3,31 +3,31 @@ CARGO_CRATES=	adler2-2.0.1 \
 		anstream-0.6.21 \
 		anstyle-1.0.13 \
 		anstyle-parse-0.2.7 \
-		anstyle-query-1.1.4 \
-		anstyle-wincon-3.0.10 \
+		anstyle-query-1.1.5 \
+		anstyle-wincon-3.0.11 \
 		base64-0.22.1 \
 		bincode-1.3.3 \
 		bindgen-0.69.5 \
 		bit-set-0.8.0 \
 		bit-vec-0.8.0 \
 		bitflags-2.10.0 \
-		bon-3.8.1 \
-		bon-macros-3.8.1 \
+		bon-3.8.2 \
+		bon-macros-3.8.2 \
 		caseless-0.2.2 \
-		cc-1.2.43 \
+		cc-1.2.53 \
 		cexpr-0.6.0 \
 		cfg-if-1.0.4 \
 		clang-sys-1.8.1 \
-		clap-4.5.51 \
-		clap_builder-4.5.51 \
+		clap-4.5.54 \
+		clap_builder-4.5.54 \
 		clap_derive-4.5.49 \
-		clap_lex-0.7.6 \
+		clap_lex-0.7.7 \
 		colorchoice-1.0.4 \
 		comrak-0.49.0 \
 		crc32fast-1.5.0 \
-		darling-0.21.3 \
-		darling_core-0.21.3 \
-		darling_macro-0.21.3 \
+		darling-0.23.0 \
+		darling_core-0.23.0 \
+		darling_macro-0.23.0 \
 		deranged-0.5.5 \
 		either-1.15.0 \
 		emojis-0.6.4 \
@@ -35,22 +35,22 @@ CARGO_CRATES=	adler2-2.0.1 \
 		equivalent-1.0.2 \
 		errno-0.3.14 \
 		fancy-regex-0.16.2 \
-		find-msvc-tools-0.1.4 \
-		flate2-1.1.5 \
+		find-msvc-tools-0.1.8 \
+		flate2-1.1.8 \
 		fmt2io-1.0.0 \
 		fnv-1.0.7 \
 		glob-0.3.3 \
-		hashbrown-0.16.0 \
+		hashbrown-0.16.1 \
 		heck-0.5.0 \
 		ident_case-1.0.1 \
-		indexmap-2.12.0 \
+		indexmap-2.13.0 \
 		is_terminal_polyfill-1.70.2 \
 		itertools-0.12.1 \
-		itoa-1.0.15 \
+		itoa-1.0.17 \
 		jetscii-0.5.3 \
 		lazy_static-1.5.0 \
 		lazycell-1.3.0 \
-		libc-0.2.177 \
+		libc-0.2.180 \
 		libloading-0.8.9 \
 		linked-hash-map-0.5.6 \
 		linux-raw-sys-0.11.0 \
@@ -71,44 +71,44 @@ CARGO_CRATES=	adler2-2.0.1 \
 		plist-1.8.0 \
 		powerfmt-0.2.0 \
 		prettyplease-0.2.37 \
-		proc-macro2-1.0.103 \
-		quick-xml-0.38.3 \
-		quote-1.0.41 \
-		rb-sys-0.9.123 \
-		rb-sys-build-0.9.123 \
-		rb-sys-env-0.2.2 \
+		proc-macro2-1.0.105 \
+		quick-xml-0.38.4 \
+		quote-1.0.43 \
+		rb-allocator-0.9.6 \
+		rb-sys-0.9.124 \
+		rb-sys-build-0.9.124 \
+		rb-sys-env-0.2.3 \
 		rctree-0.6.0 \
 		regex-1.12.2 \
 		regex-automata-0.4.13 \
 		regex-syntax-0.8.8 \
 		rustc-hash-1.1.0 \
-		rustix-1.1.2 \
+		rustix-1.1.3 \
 		rustversion-1.0.22 \
-		ryu-1.0.20 \
 		same-file-1.0.6 \
 		seq-macro-0.3.6 \
 		serde-1.0.228 \
 		serde_core-1.0.228 \
 		serde_derive-1.0.228 \
-		serde_json-1.0.145 \
-		shell-words-1.1.0 \
+		serde_json-1.0.149 \
+		shell-words-1.1.1 \
 		shlex-1.3.0 \
-		simd-adler32-0.3.7 \
+		simd-adler32-0.3.8 \
 		siphasher-1.0.1 \
 		strsim-0.11.1 \
-		syn-2.0.108 \
+		syn-2.0.114 \
 		syntect-5.3.0 \
 		terminal_size-0.4.3 \
-		thiserror-2.0.17 \
-		thiserror-impl-2.0.17 \
-		time-0.3.44 \
-		time-core-0.1.6 \
-		time-macros-0.2.24 \
+		thiserror-2.0.18 \
+		thiserror-impl-2.0.18 \
+		time-0.3.45 \
+		time-core-0.1.7 \
+		time-macros-0.2.25 \
 		tinyvec-1.10.0 \
 		tinyvec_macros-0.1.1 \
 		typed-arena-2.0.2 \
-		unicode-ident-1.0.20 \
-		unicode-normalization-0.1.24 \
+		unicode-ident-1.0.22 \
+		unicode-normalization-0.1.25 \
 		unicode_categories-0.1.1 \
 		utf8parse-0.2.2 \
 		walkdir-2.5.0 \
@@ -126,4 +126,5 @@ CARGO_CRATES=	adler2-2.0.1 \
 		windows_x86_64_gnullvm-0.53.1 \
 		windows_x86_64_msvc-0.53.1 \
 		xdg-2.5.2 \
-		yaml-rust-0.4.5
+		yaml-rust-0.4.5 \
+		zmij-1.0.15
