devel/concurrencykit: Enable riscv64 build

--- a/devel/concurrencykit/Makefile
+++ b/devel/concurrencykit/Makefile
@@ -9,7 +9,7 @@ WWW=		https://github.com/concurrencykit/ck
 LICENSE=	BSD2CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-ONLY_FOR_ARCHS=	aarch64 amd64 armv6 armv7 i386 powerpc powerpc64 powerpc64le
+ONLY_FOR_ARCHS=	aarch64 amd64 armv6 armv7 i386 powerpc powerpc64 powerpc64le riscv64
 
 USES=		pkgconfig
 USE_LDCONFIG=	yes
