--- a/graphics/glslang/Makefile
+++ b/graphics/glslang/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	glslang
-DISTVERSION=	16.1.0
-PORTREVISION=	2
+DISTVERSION=	16.2.0
 CATEGORIES=	graphics
 
 MAINTAINER=	tagattie@FreeBSD.org
@@ -17,6 +16,10 @@ RUN_DEPENDS=	spirv-tools>0:graphics/spirv-tools
 TEST_DEPENDS=	bash:shells/bash \
 		gmake:devel/gmake
 
+FLAVORS=	static shared
+FLAVOR?=	${FLAVORS:[1]}
+shared_PKGNAMESUFFIX=	-shared
+
 USES=		cmake:testing compiler:c++11-lib python:build
 
 USE_GITHUB=	yes
@@ -25,5 +28,21 @@ GH_ACCOUNT=	KhronosGroup
 CMAKE_ON=	ALLOW_EXTERNAL_SPIRV_TOOLS
 
 PORTSCOUT=	limit:^[0-9]+\.	# avoid tags like sdk-candidate-26-jul-2020
+
+.if ${FLAVOR} == static
+PLIST_SUB=	SHARED="@comment " \
+		STATIC=""
+.else
+CMAKE_ON+=	BUILD_SHARED_LIBS
+PLIST_SUB=	SHARED="" \
+		STATIC="@comment " \
+		SOVERSION_FULL=${DISTVERSION} \
+		SOVERSION_MAJOR=${DISTVERSION:R:R}
+
+post-install:
+	${RM} -r ${STAGEDIR}${PREFIX}/bin/* \
+		 ${STAGEDIR}${PREFIX}/include/* \
+		 ${STAGEDIR}${PREFIX}/lib/cmake
+.endif
 
 .include <bsd.port.mk>
