graphics/opencv: Update to 4.13.0
PR:		292888

--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -1,10 +1,6 @@
 PORTNAME=	opencv
-DISTVERSION=	4.12.0
+DISTVERSION=	4.13.0
 CATEGORIES=	graphics
-
-PATCH_SITES=	https://github.com/opencv/opencv/commit/
-PATCHFILES=	86df53155411b3ade57d0213bf8dd63006bf248f.patch:-p1 \
-		443d0ae63fad6dfd8c485d609203db16c8bd0ec3.patch:-p1
 
 MAINTAINER=	desktop@FreeBSD.org
 COMMENT=	Open Source Computer Vision library
@@ -29,9 +25,9 @@ CMAKE_OFF=	BUILD_opencv_python2 BUILD_TESTS OPENCV_GENERATE_SETUPVARS
 
 DATADIR=	${PREFIX}/share/${PORTNAME}4
 
-PLIST_SUB=	SHLIB_VER=${DISTVERSION}
+PLIST_SUB=	SHLIB_VER=${DISTVERSION} SHORTVERSION=${DISTVERSION:R:S/.//g}
 
-OPTIONS_DEFINE=		EIGEN GDAL GDCM HARDENING JAVA LTO OPENCL PATENTED \
+OPTIONS_DEFINE=		EIGEN GDAL GDCM HARDENING JAVA LTO ONNX OPENCL PATENTED \
 			PROTOBUF PYTHON TBB TESSERACT
 OPTIONS_DEFAULT=	DC1394 EIGEN GDAL GDCM GPHOTO2 GSTREAMER JPEG OPENBLAS \
 			OPENCL OPENEXR OPENJPEG PNG PROTOBUF PYTHON TIFF V4L \
@@ -78,6 +74,11 @@ JAVA_USES=		java
 
 LTO_DESC=	Enables Link Time Optimizations
 LTO_CMAKE_BOOL=	ENABLE_THIN_LTO
+
+ONNX_DESC=		Include Microsoft ONNX Runtim support
+ONNX_CMAKE_BOOL=	WITH_ONNX
+ONNX_CMAKE_ON=		-DONNXRT_ROOT_DIR=${LOCALBASE}
+ONNX_LIB_DEPENDS=	libonnxruntime.so:misc/onnxruntime
 
 OPENCL_DESC=		Add OpenCL Support
 OPENCL_CMAKE_BOOL=	WITH_OPENCL
