--- a/science/Makefile
+++ b/science/Makefile
@@ -83,6 +83,7 @@
     SUBDIR += dynare
     SUBDIR += eccodes
     SUBDIR += elk
+    SUBDIR += elmerfem
     SUBDIR += epte
     SUBDIR += erd
     SUBDIR += ergo
