science/elmerfem: upgrade to v26.1
- Releases notes at https://github.com/ElmerCSC/elmerfem/releases .

- take maintainership, but email sent to the previous maintainer.

--- a/science/elmerfem/Makefile
+++ b/science/elmerfem/Makefile
@@ -1,29 +1,22 @@
 PORTNAME=	elmerfem
 DISTVERSIONPREFIX=	release-
-DISTVERSION=	9.0
-PORTREVISION=	23
+DISTVERSION=	26.1
 CATEGORIES=	science
 
-PATCH_SITES=	https://github.com/ElmerCSC/${PORTNAME}/commit/
-PATCHFILES=	48e9430c.patch:-p1 # https://github.com/ElmerCSC/elmerfem/pull/294
-
-MAINTAINER=	henrik@gulbra.net
+MAINTAINER=	thierry@FreeBSD.org
 COMMENT=	Multiphysical simulation software
 WWW=		https://www.elmerfem.org/blog/
 
 LICENSE=	GPLv2
 
-BROKEN=		fails to build with vtk-9.5.0, see https://github.com/ElmerCSC/elmerfem/issues/677
-
-LIB_DEPENDS=	libblas.so:math/blas \
-		libhdf5.so:science/hdf5 \
+LIB_DEPENDS=	libhdf5.so:science/hdf5 \
 		libmetis.so:math/metis \
-		libmpich.so:net/mpich \
 		libnetcdf.so:science/netcdf \
-		libopenblas.so:math/openblas \
-		libparpack.so:math/arpack-ng
+		libparpack.so:math/arpack-ng \
+		libcholmod.so:math/suitesparse-cholmod \
+	        libumfpack.so:math/suitesparse-umfpack
 
-USES=		cmake compiler:c++11-lang fortran
+USES=		blaslapack:openblas cmake compiler:c++11-lang fortran localbase mpi
 USE_CXXSTD=	c++14
 USE_GITHUB=	yes
 GH_ACCOUNT=	ElmerCSC
@@ -33,21 +26,23 @@ CMAKE_ARGS=	-DELMER_FEM_REVISION:STRING=${GH_TAGNAME}
 
 ALL_TARGET=	# empty
 
-LDFLAGS+=	-L${LOCALBASE}/lib
-
-PORTSCOUT=	limit:^release-[1-9]
-
-CMAKE_ARGS+=	-DHAVE_INTTYPES_H=ON
+CMAKE_ARGS+=	-DHAVE_INTTYPES_H:BOOL=ON	\
+		-DEXTERNAL_ARPACK:BOOL=ON	\
+		-DEXTERNAL_PARPACK:BOOL=ON	\
+		-DEXTERNAL_UMFPACK:BOOL=ON
 .if !defined(MAINTAINER_MODE)
 CMAKE_ARGS+=	-Wno-dev
 .endif
 
-OPTIONS_DEFINE=		GUI OCC
+OPTIONS_DEFINE=		DOCS GUI OCC
 OPTIONS_DEFAULT=	GUI OCC
 OPTIONS_SUB=		yes
 
 GUI_DESC=		Build with ElmerGUI (Graphical User Interface)
 OCC_DESC=		Use OpenCASCADE for CAD import in ElmerGUI
+
+DOCS_USES=		tex
+DOCS_USE=		tex=pdftex:build
 
 GUI_LIB_DEPENDS=	libqwt.so:x11-toolkits/qwt6@qt5
 GUI_USES=		gl jpeg qt:5 xorg
@@ -64,6 +59,7 @@ OCC_LIB_DEPENDS=	libexpat.so:textproc/expat2 \
 			libfreetype.so:print/freetype2 \
 			libpng.so:graphics/png \
 			libpython${_PYVERSION}.so:lang/python${PYTHON_SUFFIX} \
+			libboost_thread.so:devel/boost-libs \
 			libtiff.so:graphics/tiff \
 			libTKernel.so:cad/opencascade \
 			libvtksys-${VTK_VER}.so:math/vtk${VTK_VER:R}
@@ -93,21 +89,20 @@ FFLAGS+=	-fPIC
 FFLAGS+=	-fallow-argument-mismatch
 .endif
 
-post-patch:
-	@${RM} ${WRKSRC}/cmake/Modules/CMakeParseArguments.cmake
-	@${RM} -r ${WRKSRC}/elmergrid/src/metis-5.1.0
-	@${REINPLACE_CMD} -e 's,"metis.*/metis\.h",<metis.h>,' \
+pre-configure:
+	${RM} ${WRKSRC}/cmake/Modules/CMakeParseArguments.cmake
+	${RM} -r ${WRKSRC}/elmergrid/src/metis-5.1.0
+	${REINPLACE_CMD} -e 's,"metis.*/metis\.h",<metis.h>,' \
 		${WRKSRC}/elmergrid/src/egparallel.c
+
+pre-configure-DOCS-off:
+	${REINPLACE_CMD} -e '/doc/s|ADD_SUB|#ADD_SUB|' ${WRKSRC}/fhutiter/CMakeLists.txt
 
 pre-configure-OCC-on:
 	${REINPLACE_CMD} -e "s|\$${VERSION}|`${PKG_QUERY} '%v' opencascade`|" \
 		"${WRKSRC}/cmake/Modules/FindOCE.cmake"
 	${REINPLACE_CMD} -e 's|$${INCLUDE}|${LOCALBASE}/include/OpenCASCADE|' \
 		"${WRKSRC}/cmake/Modules/FindOCE.cmake"
-
-post-configure:
-	# workaround for https://github.com/ElmerCSC/elmerfem/issues/334
-	@${REINPLACE_CMD} -e 's| -lMPI::MPI_C | |' ${BUILD_WRKSRC}/ElmerGUI/Application/CMakeFiles/ElmerGUI.dir/link.txt
 
 post-install:
 	${LN} -sf ElmerSolver_mpi ${STAGEDIR}${PREFIX}/bin/ElmerSolver
