devel/rubygem-thor14: add new port
to fix build error for sysutils/rubygem-tmuxinator

(cherry picked from commit c405f68b2c25894ec5dbdc9246154839bd5a3391)

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8130,6 +8130,7 @@
     SUBDIR += rubygem-thor
     SUBDIR += rubygem-thor0
     SUBDIR += rubygem-thor12
+    SUBDIR += rubygem-thor14
     SUBDIR += rubygem-thread-local
     SUBDIR += rubygem-thread_safe
     SUBDIR += rubygem-thrift
