misc/emacs-libvterm: New port for Emacs libvterm integration
Emacs-libvterm (vterm) is fully-fledged terminal emulator inside GNU
Emacs based on libvterm, a C library. As a result of using compiled
code (instead of elisp), emacs-libvterm is fully capable, fast, and it
can seamlessly handle large outputs.

Reviewed by:	jrm
Pull Request:	https://github.com/freebsd/freebsd-ports/pull/480

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -109,6 +109,7 @@
     SUBDIR += edflib
     SUBDIR += elki
     SUBDIR += elscreen
+    SUBDIR += emacs-libvterm
     SUBDIR += estic
     SUBDIR += exercism
     SUBDIR += explosions
