emulators/virtualbox-ose-7[012]: Fix build after update devel/gsoap 2.8.139 => 2.8.140
out/freebsd.amd64/release/obj/webservice/soapC-7.cpp:5:32: error: use of undeclared identifier 'soap_codes_vbox__PartitionType'
    5 |         const char *s = soap_code_str(soap_codes_vbox__PartitionType, (long)n);
      |                                       ^
out/freebsd.amd64/release/obj/webservice/soapC-7.cpp:23:18: error: use of undeclared identifier 'soap_codes_vbox__PartitionType'
   23 |         map = soap_code(soap_codes_vbox__PartitionType, s);
      |                         ^
2 errors generated.

PR:		292890
Reported by:	pkg-fallout

--- a/emulators/virtualbox-ose-72/Makefile
+++ b/emulators/virtualbox-ose-72/Makefile
@@ -266,6 +266,7 @@ post-patch:
 .if ${PORT_OPTIONS:MWEBSERVICE}
 	@${ECHO_CMD} 'VBOX_WITH_WEBSERVICES = 1' >> ${WRKSRC}/LocalConfig.kmk
 	@${ECHO_CMD} 'VBOX_GSOAP_INSTALLED = 1' >> ${WRKSRC}/LocalConfig.kmk
+	@${ECHO_CMD} 'VBOX_WITHOUT_SPLIT_SOAPC = 1' >> ${WRKSRC}/LocalConfig.kmk
 	@${ECHO_CMD} 'VBOX_PATH_GSOAP = ${PREFIX}/lib/gsoap' >> \
 	    ${WRKSRC}/LocalConfig.kmk
 	@${ECHO_CMD} 'VBOX_PATH_GSOAP_BIN = ${PREFIX}/bin' >> \
