emulators/virtualbox-ose*: Exclude from extract bundled binary files of kBuild
Thes is ~430-640 files, ~30-55MB total for different platforms.
We are using devel/kBuild for build VirtualBox ports.
devel/kBuild is a newer version than the one included in the VirtualBox
tarballs.

--- a/emulators/virtualbox-ose-71/Makefile
+++ b/emulators/virtualbox-ose-71/Makefile
@@ -52,6 +52,8 @@ CONFLICTS_INSTALL=	virtualbox-ose-legacy \
 			virtualbox-ose-72 \
 			virtualbox-ose-nox11-72
 
+EXTRACT_AFTER_ARGS=	--exclude kBuild/bin \
+			--no-same-owner --no-same-permissions
 PORTSCOUT=	limit:^7\.1\.
 SUB_FILES=	pkg-message
 SUB_LIST=	VBOXDIR=${VBOX_DIR} \
