--- a/graphics/shaderc/Makefile
+++ b/graphics/shaderc/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	shaderc
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2025.5
-PORTREVISION=	2
+DISTVERSION=	2026.1
 CATEGORIES=	graphics devel
 
 MAINTAINER=	tagattie@FreeBSD.org
@@ -20,7 +19,10 @@ USES=		cmake:testing compiler:c++11-lib localbase:ldflags \
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	google
-GH_TUPLE=	KhronosGroup:SPIRV-Headers:1.5.4.raytracing.fixed-454-gb824a46:headers/third_party/spirv-headers
+# for GH_TAGNAME in GH_TUPLE
+# git clone --quiet https://github.com/KhronosGroup/SPIRV-Headers.git && git -C SPIRV-Headers describe <COMMIT_HASH>
+# for COMMIT_HASH see ${WRKSRC}/DEPS
+GH_TUPLE=	KhronosGroup:SPIRV-Headers:1.5.4.raytracing.fixed-461-g04f10f6:headers/third_party/spirv-headers
 
 USE_LDCONFIG=	yes
 
