move to x11, remove redundant project line, update version & message
Signed-off-by: tslight <tslight@pm.com>

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -77,6 +77,7 @@
     SUBDIR += eaglemode
     SUBDIR += editres
     SUBDIR += elementary-terminal
+    SUBDIR += emacs-libvterm
     SUBDIR += emprint
     SUBDIR += erun
     SUBDIR += evilvte
