move back to misc since it runs fine in emacs-nox and update sums
Signed-off-by: tslight <tslight@pm.com>

--- a/misc/emacs-libvterm/Makefile
+++ b/misc/emacs-libvterm/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	emacs-libvterm
 DISTVERSION=	g20251119
-CATEGORIES=	x11 elisp
+CATEGORIES=	misc elisp
 PKGNAMESUFFIX=	${EMACS_PKGNAMESUFFIX}
 
 MAINTAINER=	tslight@pm.me
