--- a/net/xrdp/Makefile
+++ b/net/xrdp/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	xrdp
 DISTVERSION=	0.10.5
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	net
 MASTER_SITES=	https://github.com/neutrinolabs/${PORTNAME}/releases/download/v${DISTVERSION}/
@@ -16,8 +17,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	${LOCALBASE}/bin/nasm:devel/nasm
 LIB_DEPENDS=	libImlib2.so:graphics/imlib2
-RUN_DEPENDS=	${LOCALBASE}/lib/xorg/modules/libxorgxrdp.so:x11-drivers/xorgxrdp \
-		xterm:x11/xterm
+RUN_DEPENDS=	xterm:x11/xterm
 
 USES=		autoreconf:build compiler:c11 cpe jpeg libtool localbase \
 		pkgconfig ssl xorg
@@ -26,6 +26,7 @@ USE_LDCONFIG=	${PREFIX}/lib/xrdp
 USE_XORG=	ice pixman sm x11 xfixes xrandr
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 CONFIGURE_ARGS=	--enable-imlib2 \
 		--enable-jpeg \
 		--enable-painter \
@@ -69,8 +70,6 @@ OPUS_LIB_DEPENDS=		libopus.so:audio/opus
 OPUS_CONFIGURE_ENABLE=		opus
 X264_LIB_DEPENDS=		libx264.so:multimedia/libx264
 X264_CONFIGURE_ENABLE=		x264
-
-GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 
 GROUP=		_xrdp
 USER=		_xrdp
