net/go-pkgsite: update to 0.0.0.20260203160948
 - now requires Go 1.25

Changelog: https://github.com/golang/pkgsite/commits/59122fa7f9f37d35dc3171b4f82c2d0f4d961f8d

--- a/net/go-pkgsite/Makefile
+++ b/net/go-pkgsite/Makefile
@@ -1,7 +1,5 @@
 PORTNAME=	go-pkgsite
 PORTVERSION=    ${MODVERSION:S/-/./g:R}
-DISTVERSIONPREFIX=	v
-PORTREVISION=	2
 CATEGORIES=	net devel
 
 MAINTAINER=	fuz@FreeBSD.org
@@ -11,8 +9,8 @@ WWW=		https://pkg.go.dev/golang.org/x/pkgsite/cmd/pkgsite
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		go:modules
-MODVERSION=	0.0.0-20251209150622-7dafa59905ae
+USES=		go:modules,1.25+
+MODVERSION=	0.0.0-20260203160948-59122fa7f9f3
 GO_MODULE=	golang.org/x/pkgsite@v${MODVERSION}
 
 GO_TARGET=	./cmd/pkgsite
