devel/task: Update to 3.48.0
Changelog: https://github.com/go-task/task/blob/v3.48.0/CHANGELOG.md

Reported by:	GitHub (watch releases)

--- a/devel/task/Makefile
+++ b/devel/task/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	task
 DISTVERSIONPREFIX=	v
-DISTVERSION=	3.46.4
-PORTREVISION=	1
+DISTVERSION=	3.48.0
 CATEGORIES=	devel
 
 MAINTAINER=	tagattie@FreeBSD.org
@@ -11,7 +10,7 @@ WWW=		https://taskfile.dev/
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		go:modules
+USES=		go:1.25+,modules
 
 GO_MODULE=	github.com/go-task/task/v3
 GO_TARGET=	./cmd/task
