--- a/dns/inadyn/Makefile
+++ b/dns/inadyn/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	inadyn
 PORTVERSION=	2.13.0
+PORTREVISION=	1
 CATEGORIES=	dns
 MASTER_SITES=	https://github.com/troglobit/${PORTNAME}/releases/download/v${PORTVERSION}/
 
