--- a/databases/rainfrog/Makefile.crates
+++ b/databases/rainfrog/Makefile.crates
@@ -12,22 +12,24 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		anstyle-query-1.1.4 \
 		anstyle-wincon-3.0.10 \
 		anyhow-1.0.99 \
+		arbitrary-1.4.2 \
 		arboard-3.6.1 \
 		arraydeque-0.5.1 \
 		arrayvec-0.7.6 \
-		arrow-55.2.0 \
-		arrow-arith-55.2.0 \
-		arrow-array-55.2.0 \
-		arrow-buffer-55.2.0 \
-		arrow-cast-55.2.0 \
-		arrow-data-55.2.0 \
-		arrow-ord-55.2.0 \
-		arrow-row-55.2.0 \
-		arrow-schema-55.2.0 \
-		arrow-select-55.2.0 \
-		arrow-string-55.2.0 \
+		arrow-56.2.0 \
+		arrow-arith-56.2.0 \
+		arrow-array-56.2.0 \
+		arrow-buffer-56.2.0 \
+		arrow-cast-56.2.0 \
+		arrow-data-56.2.0 \
+		arrow-ord-56.2.0 \
+		arrow-row-56.2.0 \
+		arrow-schema-56.2.0 \
+		arrow-select-56.2.0 \
+		arrow-string-56.2.0 \
 		async-trait-0.1.89 \
 		atoi-2.0.0 \
+		atomic-waker-1.1.2 \
 		autocfg-1.5.0 \
 		backtrace-0.3.75 \
 		base64-0.21.7 \
@@ -46,7 +48,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		bytemuck-1.23.2 \
 		byteorder-1.5.0 \
 		byteorder-lite-0.1.0 \
-		bytes-1.10.1 \
+		bytes-1.11.1 \
 		camino-1.1.11 \
 		cargo-platform-0.1.9 \
 		cargo_metadata-0.19.2 \
@@ -65,7 +67,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		color-eyre-0.6.5 \
 		color-spantrace-0.3.0 \
 		colorchoice-1.0.4 \
-		comfy-table-7.2.0 \
+		comfy-table-7.1.2 \
 		compact_str-0.8.1 \
 		concurrent-queue-2.5.0 \
 		config-0.14.1 \
@@ -97,6 +99,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		darling_macro-0.20.11 \
 		der-0.7.10 \
 		deranged-0.4.0 \
+		derive_arbitrary-1.4.2 \
 		derive_builder-0.20.2 \
 		derive_builder_core-0.20.2 \
 		derive_builder_macro-0.20.2 \
@@ -110,7 +113,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		dlv-list-0.5.2 \
 		dotenvy-0.15.7 \
 		downcast-rs-1.2.1 \
-		duckdb-1.3.2 \
+		duckdb-1.4.4 \
 		either-1.15.0 \
 		encode_unicode-1.0.0 \
 		encoding_rs-0.8.35 \
@@ -152,6 +155,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		hashbrown-0.12.3 \
 		hashbrown-0.14.5 \
 		hashbrown-0.15.5 \
+		hashbrown-0.16.1 \
 		hashlink-0.8.4 \
 		hashlink-0.10.0 \
 		heck-0.5.0 \
@@ -159,7 +163,14 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		hkdf-0.12.4 \
 		hmac-0.12.1 \
 		home-0.5.11 \
+		http-1.4.0 \
+		http-body-1.0.1 \
+		http-body-util-0.1.3 \
+		httparse-1.10.1 \
 		human-panic-2.0.3 \
+		hyper-1.8.1 \
+		hyper-rustls-0.27.7 \
+		hyper-util-0.1.20 \
 		iana-time-zone-0.1.63 \
 		iana-time-zone-haiku-0.1.2 \
 		icu_collections-2.0.0 \
@@ -178,7 +189,9 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		indoc-2.0.6 \
 		instability-0.3.9 \
 		io-uring-0.7.10 \
+		ipnet-2.11.0 \
 		ipnetwork-0.20.0 \
+		iri-string-0.7.10 \
 		is_terminal_polyfill-1.70.1 \
 		itertools-0.13.0 \
 		itoa-1.0.15 \
@@ -195,19 +208,21 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		lexical-write-float-1.0.5 \
 		lexical-write-integer-1.0.5 \
 		libc-0.2.175 \
-		libduckdb-sys-1.3.2 \
+		libduckdb-sys-1.4.4 \
 		libgit2-sys-0.18.2+1.9.1 \
 		libm-0.2.15 \
 		libredox-0.1.9 \
 		libsqlite3-sys-0.30.1 \
+		libz-rs-sys-0.5.5 \
 		libz-sys-1.1.22 \
 		linux-keyutils-0.2.4 \
 		linux-raw-sys-0.4.15 \
 		linux-raw-sys-0.9.4 \
 		litemap-0.8.0 \
 		lock_api-0.4.13 \
-		log-0.4.27 \
+		log-0.4.29 \
 		lru-0.12.5 \
+		lru-slab-0.1.2 \
 		matchers-0.2.0 \
 		md-5-0.10.6 \
 		memchr-2.7.5 \
@@ -219,7 +234,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		nu-ansi-term-0.50.1 \
 		num-0.4.3 \
 		num-bigint-0.4.6 \
-		num-bigint-dig-0.8.4 \
+		num-bigint-dig-0.8.6 \
 		num-complex-0.4.6 \
 		num-conv-0.1.0 \
 		num-integer-0.1.46 \
@@ -275,12 +290,18 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		ptr_meta_derive-0.1.4 \
 		quick-xml-0.37.5 \
 		quick-xml-0.38.3 \
+		quinn-0.11.9 \
+		quinn-proto-0.11.13 \
+		quinn-udp-0.5.14 \
 		quote-1.0.40 \
 		r-efi-5.3.0 \
 		radium-0.7.0 \
 		rand-0.8.5 \
+		rand-0.9.2 \
 		rand_chacha-0.3.1 \
+		rand_chacha-0.9.0 \
 		rand_core-0.6.4 \
+		rand_core-0.9.5 \
 		ratatui-0.29.0 \
 		recursive-0.1.1 \
 		recursive-proc-macro-impl-0.1.1 \
@@ -290,16 +311,18 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		regex-automata-0.4.9 \
 		regex-syntax-0.8.5 \
 		rend-0.4.2 \
+		reqwest-0.12.28 \
 		ring-0.17.14 \
 		rkyv-0.7.45 \
 		rkyv_derive-0.7.45 \
 		ron-0.8.1 \
 		rpassword-7.4.0 \
-		rsa-0.9.8 \
+		rsa-0.9.10 \
 		rtoolbox-0.0.3 \
 		rust-ini-0.20.0 \
 		rust_decimal-1.37.2 \
 		rustc-demangle-0.1.26 \
+		rustc-hash-2.1.1 \
 		rustc_version-0.4.1 \
 		rustix-0.38.44 \
 		rustix-1.0.8 \
@@ -357,6 +380,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		subtle-2.6.1 \
 		syn-1.0.109 \
 		syn-2.0.106 \
+		sync_wrapper-1.0.2 \
 		synstructure-0.13.2 \
 		sysinfo-0.34.2 \
 		tap-1.0.1 \
@@ -376,6 +400,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		tinyvec_macros-0.1.1 \
 		tokio-1.47.1 \
 		tokio-macros-2.5.0 \
+		tokio-rustls-0.26.4 \
 		tokio-stream-0.1.17 \
 		tokio-util-0.7.16 \
 		toml-0.8.23 \
@@ -385,6 +410,10 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		toml_edit-0.22.27 \
 		toml_write-0.1.2 \
 		toml_writer-1.0.2 \
+		tower-0.5.3 \
+		tower-http-0.6.8 \
+		tower-layer-0.3.3 \
+		tower-service-0.3.3 \
 		tracing-0.1.41 \
 		tracing-attributes-0.1.30 \
 		tracing-core-0.1.34 \
@@ -392,6 +421,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		tracing-log-0.2.0 \
 		tracing-subscriber-0.3.20 \
 		tree_magic_mini-3.2.0 \
+		try-lock-0.2.5 \
 		tui-textarea-0.7.0 \
 		typenum-1.18.0 \
 		ucd-trie-0.1.7 \
@@ -416,11 +446,13 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		vergen-lib-0.1.6 \
 		version_check-0.9.5 \
 		vte-0.14.1 \
+		want-0.3.1 \
 		wasi-0.11.1+wasi-snapshot-preview1 \
 		wasi-0.14.2+wasi-0.2.4 \
 		wasite-0.1.0 \
 		wasm-bindgen-0.2.100 \
 		wasm-bindgen-backend-0.2.100 \
+		wasm-bindgen-futures-0.4.50 \
 		wasm-bindgen-macro-0.2.100 \
 		wasm-bindgen-macro-support-0.2.100 \
 		wasm-bindgen-shared-0.2.100 \
@@ -430,6 +462,8 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		wayland-protocols-wlr-0.3.9 \
 		wayland-scanner-0.31.7 \
 		wayland-sys-0.31.7 \
+		web-sys-0.3.77 \
+		web-time-1.1.0 \
 		webpki-roots-0.26.11 \
 		webpki-roots-1.0.2 \
 		weezl-0.1.10 \
@@ -497,4 +531,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		zeroize-1.8.1 \
 		zerotrie-0.2.2 \
 		zerovec-0.11.4 \
-		zerovec-derive-0.11.1
+		zerovec-derive-0.11.1 \
+		zip-6.0.0 \
+		zlib-rs-0.5.5 \
+		zopfli-0.8.3
