devel/py-darkdetect: Add new port
The main application of this Python package is to detect the Dark mode from
your GUI Python application (Tkinter/wx/pyqt/qt for python (pyside)/...) and
apply the needed adjustments to your interface. Darkdetect is particularly
useful if your GUI library does not provide a public API for this detection.
In addition, this package does not depend on other modules or packages that are
not already included in standard Python distributions.

https://pypi.org/project/darkdetect/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4784,6 +4784,7 @@
     SUBDIR += py-daemons
     SUBDIR += py-daiquiri
     SUBDIR += py-dal
+    SUBDIR += py-darkdetect
     SUBDIR += py-darts.util.lru
     SUBDIR += py-dask
     SUBDIR += py-dask-awkward
