graphics/opencv: unbreak build on aarch64 (+)
Since 4.13.0, usage of KleidiCV (arm-specific acceleration library) is on by default which breaks aarch64 build.
Set it to OFF to mimics previous behavior until library will be ported to FreeBSD.

--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -21,7 +21,7 @@ USE_LDCONFIG=	yes
 
 CMAKE_ARGS=	-DOPENCV_EXTRA_MODULES_PATH="${WRKSRC}/contrib/modules"
 CMAKE_ON=	OPENCV_GENERATE_PKGCONFIG OPENCV_SKIP_CMAKE_CXX_STANDARD
-CMAKE_OFF=	BUILD_opencv_python2 BUILD_TESTS OPENCV_GENERATE_SETUPVARS
+CMAKE_OFF=	BUILD_opencv_python2 BUILD_TESTS OPENCV_GENERATE_SETUPVARS WITH_KLEIDICV
 
 DATADIR=	${PREFIX}/share/${PORTNAME}4
 
