devel/py-pyperclipimg: Add new port
This Python module provides copy() and paste() clipboard functions
for images on Windows, macOS, Linux and FreeBSD.

https://pypi.org/project/pyperclipimg/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5708,6 +5708,7 @@
     SUBDIR += py-pyparsing2
     SUBDIR += py-pypemicro
     SUBDIR += py-pyperclip
+    SUBDIR += py-pyperclipimg
     SUBDIR += py-pyperf
     SUBDIR += py-pyperscan
     SUBDIR += py-pyplusplus
