multimedia/hyprpwcenter: Add port: GUI Pipewire control center
hyprpwcenter is a GUI control center for pipewire. It allows to look
and configure nodes, outputs, and adjust the pw graph.

WWW: https://github.com/hyprwm/hyprpwcenter

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -117,6 +117,7 @@
     SUBDIR += haruna
     SUBDIR += harvid
     SUBDIR += helvum
+    SUBDIR += hyprpwcenter
     SUBDIR += intel-media-sdk
     SUBDIR += iso2mkv
     SUBDIR += jellyfin
