--- a/sysutils/auto-admin/Makefile
+++ b/sysutils/auto-admin/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	auto-admin
-DISTVERSION=	0.8.4-14
-DISTVERSIONSUFFIX=	-ge80fca5
+DISTVERSION=	0.8.4-22
+DISTVERSIONSUFFIX=	-g59caa81
 CATEGORIES=	sysutils
 
 MAINTAINER=	jwb@FreeBSD.org
