devel/hs-ghcup: New Port: Main installer Haskell
GHCup is the primary installer and version manager for the Haskell
toolchain. It provides a unified interface to install and switch
between different versions of GHC, Cabal, Stack, and the
Haskell Language Server.

WWW: https://www.haskell.org/ghcup/

PR:		292940
Approved by:	eduardo (mentor)

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -992,6 +992,7 @@
     SUBDIR += hs-darcs
     SUBDIR += hs-ghc-events
     SUBDIR += hs-ghcprofview
+    SUBDIR += hs-ghcup
     SUBDIR += hs-git-annex
     SUBDIR += hs-git-brunch
     SUBDIR += hs-hadolint
