some Maven build ports: pass JAVA_HOME to maven
When a port defines JAVA_VERSION but during the build multiple
jdk versions are installed, Maven does not always use the defined
version if JAVA_HOME is not set in the environment.

PR:	272855
Reviewed-by:	https://lists.freebsd.org/archives/freebsd-java/2026-February/003537.html
Approved-by:	java@

--- a/games/lizzie/Makefile
+++ b/games/lizzie/Makefile
@@ -19,6 +19,8 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	featurecat
 JAVA_VERSION=	8 # because of Bug 292662 - games/lizzie: does not build with jdk11+
 
+MAKE_ENV+=	JAVA_HOME=${JAVA_HOME}
+
 NO_ARCH=	yes
 
 # to rebuild the deps archive:
