net-mgmt/victoria-logs: upgrade to 1.44.0
- Update to the latest version
- Change download to GH because of goproxy issue
- fix logs directory ownership (PR 292405)

PR: 292405
ChangeLog: https://docs.victoriametrics.com/victorialogs/changelog/

--- a/net-mgmt/victoria-logs/Makefile
+++ b/net-mgmt/victoria-logs/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	victoria-logs
-PORTVERSION=	1.43.1
+PORTVERSION=	1.44.0
 DISTVERSIONPREFIX=	v
-PORTREVISION=	2
 CATEGORIES=	net-mgmt
 
 MAINTAINER=	samm@FreeBSD.org
@@ -13,7 +12,14 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		gmake go:1.25+,modules,no_targets
 
-GO_MODULE=	github.com/VictoriaMetrics/VictoriaLogs
+# we have to use github, as goproxy tags are wrong
+# see https://github.com/VictoriaMetrics/VictoriaLogs/issues/1071
+USE_GITHUB=	yes
+GH_ACCOUNT=	VictoriaMetrics
+GH_PROJECT=	VictoriaLogs
+GO_MODULE=	github.com/${GH_ACCOUNT}/${GH_PROJECT}
+GO_MOD_DIST=	github
+
 USE_RC_SUBR?=	${PORTNAME}
 
 MAKE_ENV=	PKG_TAG=v${PORTVERSION} GOOS=${OPSYS:tl} \
