sysutils/py-nvitop: New port: Interactive NVIDIA-GPU process viewer
An interactive NVIDIA-GPU process viewer and beyond, the one-stop
solution for GPU process management.

WWW: https://github.com/XuehaiPan/nvitop

PR:		289083
Approved by:	eduardo (mentor)

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1083,6 +1083,7 @@
     SUBDIR += py-mitogen
     SUBDIR += py-mqttwarn
     SUBDIR += py-nagiosplugin
+    SUBDIR += py-nvitop
     SUBDIR += py-overlord
     SUBDIR += py-packet-python
     SUBDIR += py-pkginfo
