devel/py-nvidia-ml-py: New port: Python bindings to NVIDIA Management Library
This library provides a Python interface to GPU management and
monitoring functions for NVIDIA GPUs.

WWW: https://pypi.org/project/nvidia-ml-py/

PR:		289082
Approved by:	eduardo (mentor)

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5369,6 +5369,7 @@
     SUBDIR += py-notify2
     SUBDIR += py-num2words
     SUBDIR += py-numba
+    SUBDIR += py-nvidia-ml-py
     SUBDIR += py-objgraph
     SUBDIR += py-objprint
     SUBDIR += py-objsize
